function and loops

--- a/style.css
+++ b/style.css
@@ -1,6 +1,6 @@
 .btn1{
     color: blue;
-    background-color: aquamarine;
+    background-color: rgb(255, 127, 161);
     border-radius: 2px solid black;
    
 }
